# SSVBloodshed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
_RELEASE/: SSVBloodshed  level.lvl  level.txt
_RELEASE/Data/: assets.json  fontOb.json  fontObBig.json  lime.json
_RELEASE/Data/Animations/: bulletBooster.json  forceField.json
_RELEASE/Data/Particles/: bloodRed.json  caseBullet.json  caseRocket.json  charge.json  debris.json  debrisFloor.json  electric.json  explosion.json  forceField.json  gibRed.json  heal.json  muzzleBullet.json  muzzlePlasma.json  muzzleRocket.json  muzzleShockwave.json  plasma.json  shard.json  shockwave.json  smoke.json  test.json
_RELEASE/Data/Tilesets/: tileset.json  tilesetEnemy.json  tilesetEnemyBig.json  tilesetGiant.json  tilesetJuggernaut.json  tilesetPlayer.json  tilesetProjectiles.json  tsBig.json  tsCharSmall.json  tsGiant.json  tsMedium.json  tsSmall.json
include/SSVBloodshed/: OBAssets.h  OBAssets.hpp  OBBarCounter.h  OBBarCounter.hpp  OBCommon.h  OBCommon.hpp  OBConfig.h  OBConfig.hpp  OBFactory.h  OBFactory.hpp  OBGDebugText.h  OBGDebugText.hpp  OBGInput.h  OBGInput.hpp  OBGParticles.h  OBGParticles.hpp  OBGame.h  OBGame.hpp  OBSharedData.hpp
include/SSVBloodshed/CESystem/: CES.h  CES.hpp  Common.h  Common.hpp  Entity.h  Entity.hpp  Entity.inl  EntityHandle.h  EntityHandle.hpp  EntityHandle.inl  IdPool.h  IdPool.hpp  Macros.h  Manager.h  Manager.hpp  System.h  System.hpp  SystemBase.h  SystemBase.hpp
include/SSVBloodshed/Components/: OBCActorBase.h  OBCActorBase.hpp  OBCBoid.h  OBCBoid.hpp  OBCBooster.hpp  OBCBulletForceField.hpp  OBCDamageOnTouch.h  OBCDamageOnTouch.hpp  OBCDir8.h  OBCDir8.hpp  OBCDirection8.h  OBCDoor.h  OBCDoor.hpp  OBCDraw.h  OBCDraw.hpp  OBCEnemy.h  OBCEnemy.hpp  OBCEnemyTypes.h  OBCEnemyTypes.hpp  OBCFloor.h  OBCFloor.hpp  OBCFloorBreaker.h  OBCFloorSmasher.h  OBCFloorSmasher.hpp  OBCForceField.h  OBCForceField.hpp  OBCHealth.h  OBCHealth.hpp  OBCHealth.inl  OBCIdReceiver.h  (+38 more)
src/SSVBloodshed/: OBCPhysics.cpp  OBFactory.cpp  OBGame.cpp  main.cpp
(+79 files in other folders)
